[main] fix button's carret align

--- a/apps/common/main/resources/less/bigscaling.less
+++ b/apps/common/main/resources/less/bigscaling.less
@@ -81,6 +81,11 @@
             display: none;
         }
     }
+
+    &:not(.uni-scale):not(.pixel-ratio__1_5 *):not(.pixel-ratio__1_25 *):not(.pixel-ratio__1_75 *) > *
+    {
+        vertical-align: middle;
+    }
 }
 
 .dropdown-menu .menu-item {
